<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/activity_margin_left"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="@dimen/activity_margin_right"
            android:orientation="vertical"/>

    <TextView
            android:id="@+id/tv_depart_title"
            tools:text="DEPART"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>

    <TextView
            android:id="@+id/tv_depart_free_seats"
            tools:text="Free seats: 3"
            android:textColor="@color/colorLightGray"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_depart_title"
            android:layout_marginTop="@dimen/activity_margin_between_vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>

    <TextView
            android:id="@+id/tv_depart_date"
            tools:text="16 SEP 2019"
            android:textColor="@color/colorMidGray"
            android:textSize="@dimen/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_depart_title"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <TextView
            android:id="@+id/tv_depart_price"
            tools:text="435 BYN"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_price"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_depart_free_seats"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_free_seats"/>

    <TextView
            android:id="@+id/tv_depart_from"
            tools:text="MSQ"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_between_small_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_depart_free_seats"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/iv_depart_airplane"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
            android:id="@+id/tv_depart_to"
            tools:text="FLO"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_depart_from"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/iv_depart_airplane"
            app:layout_constraintHorizontal_bias="0.5"/>

    <ImageView
            android:id="@+id/iv_depart_airplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_airplane_blue_24dp"
            android:rotation="90"
            app:layout_constraintEnd_toStartOf="@+id/tv_depart_to"
            app:layout_constraintStart_toEndOf="@+id/tv_depart_from"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_from"
            app:layout_constraintBottom_toBottomOf="@+id/tv_depart_from"
            android:contentDescription="@string/depart_airplane"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:id="@+id/tv_depart_time_takeoff"
            tools:text="00:20"
            android:textColor="@color/colorMidGray"
            android:textSize="@dimen/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_depart_from"
            android:layout_marginTop="@dimen/activity_margin_between_vertical"/>

    <ImageView
            android:id="@+id/iv_depart_takeoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flight_takeoff_blue_24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_depart_time_takeoff"
            android:layout_marginStart="@dimen/activity_margin_between_horizontal"
            android:contentDescription="@string/depart_takeoff"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_time_takeoff"/>

    <ImageView
            android:id="@+id/iv_depart_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_trending_flat_gray_24dp"
            app:layout_constraintStart_toEndOf="@+id/iv_depart_takeoff"
            android:layout_marginStart="@dimen/activity_margin_between_big_horizontal"
            android:contentDescription="@string/depart_trending"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_time_takeoff"/>

    <TextView
            android:id="@+id/tv_depart_time_land"
            tools:text="09:20"
            android:textColor="@color/colorMidGray"
            android:textSize="@dimen/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_time_takeoff"
            app:layout_constraintStart_toEndOf="@+id/iv_depart_trending"
            android:layout_marginStart="@dimen/activity_margin_between_big_horizontal"/>

    <ImageView
            android:id="@+id/iv_depart_land"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flight_land_blue_24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_depart_time_land"
            android:layout_marginStart="@dimen/activity_margin_between_horizontal"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_time_takeoff"
            android:contentDescription="@string/depart_land"/>

    <TextView
            android:id="@+id/tv_depart_flight_time"
            tools:text="9:00"
            android:textColor="@color/colorLightGray"
            android:textSize="@dimen/text_time_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_time_takeoff"
            app:layout_constraintBottom_toBottomOf="@+id/tv_depart_time_takeoff"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <ImageView
            android:id="@+id/iv_depart_flight_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flight_time_lightgray_24dp"
            app:layout_constraintTop_toTopOf="@+id/tv_depart_time_takeoff"
            app:layout_constraintEnd_toStartOf="@+id/tv_depart_flight_time"
            android:layout_marginEnd="@dimen/activity_margin_between_horizontal"
            android:contentDescription="@string/depart_flight_time"/>

    <View
            android:id="@+id/line_depart"
            android:background="@color/colorLightGray"
            android:layout_width = "match_parent"
            android:layout_height="@dimen/activity_line_height"
            app:layout_constraintTop_toBottomOf="@id/tv_depart_time_takeoff"
            android:layout_marginTop="@dimen/activity_margin_bottom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/activity_margin_small_left"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/activity_margin_small_right"/>



    <TextView
            android:id="@+id/tv_return_title"
            tools:text="RETURN"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginTop="@dimen/activity_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/line_depart"/>

    <TextView
            android:id="@+id/tv_return_free_seats"
            tools:text="Free seats: 5"
            android:textColor="@color/colorLightGray"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_return_title"
            android:layout_marginTop="@dimen/activity_margin_between_vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>

    <TextView
            android:id="@+id/tv_return_time_takeoff"
            tools:text="05:10"
            android:textColor="@color/colorMidGray"
            android:textSize="@dimen/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_return_from"
            android:layout_marginTop="@dimen/activity_margin_between_vertical"/>

    <TextView
            android:id="@+id/tv_return_date"
            tools:text="17 SEP 2019"
            android:textColor="@color/colorMidGray"
            android:textSize="@dimen/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_return_title"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <TextView
            android:id="@+id/tv_return_price"
            tools:text="488 BYN"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_price"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_return_free_seats"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/tv_return_free_seats"/>

    <TextView
            android:id="@+id/tv_return_from"
            tools:text="FLO"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_between_small_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_return_free_seats"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/iv_depart_airplane"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
            android:id="@+id/tv_return_to"
            tools:text="MSQ"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_return_from"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/iv_depart_airplane"
            app:layout_constraintHorizontal_bias="0.5"
            />

    <ImageView
            android:id="@+id/iv_return_airplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_airplane_blue_24dp"
            android:rotation="90"
            app:layout_constraintEnd_toStartOf="@+id/tv_return_to"
            app:layout_constraintStart_toEndOf="@+id/tv_return_from"
            app:layout_constraintTop_toTopOf="@+id/tv_return_from"
            app:layout_constraintBottom_toBottomOf="@+id/tv_return_from"
            android:contentDescription="@string/return_airplane"
            app:layout_constraintHorizontal_bias="0.5"/>

    <ImageView
            android:id="@+id/iv_return_takeoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flight_takeoff_blue_24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_return_time_takeoff"
            android:layout_marginStart="@dimen/activity_margin_between_horizontal"
            android:contentDescription="@string/return_takeoff"
            app:layout_constraintTop_toTopOf="@+id/tv_return_time_takeoff"/>

    <ImageView
            android:id="@+id/iv_return_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_trending_flat_gray_24dp"
            app:layout_constraintStart_toEndOf="@+id/iv_return_takeoff"
            android:layout_marginStart="@dimen/activity_margin_between_big_horizontal"
            android:contentDescription="@string/return_trending"
            app:layout_constraintTop_toTopOf="@+id/tv_return_time_takeoff"/>

    <TextView
            android:id="@+id/tv_return_time_land"
            tools:text="09:20"
            android:textColor="@color/colorMidGray"
            android:textSize="@dimen/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_return_time_takeoff"
            app:layout_constraintStart_toEndOf="@+id/iv_return_trending"
            android:layout_marginStart="@dimen/activity_margin_between_big_horizontal"/>

    <ImageView
            android:id="@+id/iv_return_land"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flight_land_blue_24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_return_time_land"
            android:layout_marginStart="@dimen/activity_margin_between_horizontal"
            app:layout_constraintTop_toTopOf="@+id/tv_return_time_takeoff"
            android:contentDescription="@string/return_land"/>

    <TextView
            android:id="@+id/tv_return_flight_time"
            tools:text="4:10"
            android:textColor="@color/colorLightGray"
            android:textSize="@dimen/text_time_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_return_time_takeoff"
            app:layout_constraintBottom_toBottomOf="@+id/tv_return_time_takeoff"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <ImageView
            android:id="@+id/iv_return_flight_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flight_time_lightgray_24dp"
            app:layout_constraintTop_toTopOf="@+id/tv_return_time_takeoff"
            app:layout_constraintEnd_toStartOf="@+id/tv_return_flight_time"
            android:layout_marginEnd="@dimen/activity_margin_between_horizontal"
            android:contentDescription="@string/return_flight_time"/>

    <View
            android:id="@+id/line_return"
            android:background="@color/colorLightGray"
            android:layout_width = "match_parent"
            android:layout_height="@dimen/activity_line_height"
            app:layout_constraintTop_toBottomOf="@id/tv_return_time_takeoff"
            android:layout_marginTop="@dimen/activity_margin_bottom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/activity_margin_small_left"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/activity_margin_small_right"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorGreen"
            app:srcCompat="@drawable/ic_check_white_24dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/line_return"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/activity_fab_top_margin"
            android:layout_marginBottom="@dimen/activity_fab_bottom_margin"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>